@@ -93,7 +93,10 @@ if (isset($_POST['submit_account']) && check_permission($userid,'Manage My Accou
   if (isset($_POST["lastname"])) $lastname = cleanValue($_POST["lastname"]);
 
   $email = '';
-  if (isset($_POST["email"])) $email = trim(cleanValue($_POST["email"]));
+  if (isset($_POST["email"])) {
+      $email = trim(cleanValue($_POST["email"]));
+      $email = cms_html_entity_decode($email);
+  }
 
   // Do validations
   $validinfo = true;
